Fix navbar hiding jumbo, fix quote spacing

--- a/style_OK.css
+++ b/style_OK.css
@@ -19,7 +19,7 @@
 .jumbotron {
     
     
-    margin-top: 70px;
+    margin-top: 90px;
     padding-top: 200px;
     padding-right: 20px;
     max-height:400px;
